--- a/src/components/List/List.style.css
+++ b/src/components/List/List.style.css
@@ -1,5 +1,7 @@
 ul {
   background-color: chartreuse;
+  display: flex;
+  flex-direction: column;
 }
 
 li {
@@ -9,4 +11,12 @@ li {
 li:hover {
   background-color: chartreuse;
   cursor: pointer;
+}
+
+li.selected {
+  background: wheat;
+}
+
+.adornment {
+  align-self: flex-end;
 }
